# QLDPC

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SUGGESTIONS.md  generate_all_plots.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Code/: README.md  cavity_mediated_gates.py  ldpc_process_animation.py  quantum_circuits.py  realtime_ldpc_circuit.py  syndrome_extraction.py
Code/Circuit Builder/: .tutorial_config.json  README.md  pyproject.toml  quantum_circuit_builder_3d.py  requirements.txt
Code/Circuit Builder/quantum_circuit_builder/: __init__.py  components.py  config.py
Code/Circuit Builder/quantum_circuit_builder/renderers/: __init__.py  isometric.py
Code/Circuit Builder/quantum_circuit_builder/ui/: __init__.py
Code/Circuit Builder/saved_circuits/: error_correction_demo.json  hypergraph_product_ldpc.json  quantum_tanner_linear_decoder.json  surface_code_syndrome_cycle.json  syndrome_extraction.json  tutorial_hypergraph_product.json  tutorial_ldpc_sparse.json  tutorial_repetition_code.json  tutorial_surface_code.json  tutorial_syndrome_extraction.json
Code/Circuit Builder/saved_circuits/circuits/: error_ghz_multi.json  error_phaseflip_z.json  hypergraph_product_ldpc.json  qft_3qubit.json  quantum_teleportation.json  shor_9qubit_encoder.json  steane_7qubit_encoder.json
Code/Circuit Builder/saved_circuits/surface/: logical_x_operation.json  single_x_stabilizer.json  two_error_chain.json
Code/Circuit Builder/saved_circuits/余分/: 2d_local_constraints_ldpc.json  bell_state_circuit.json  cavity_mediated_ldpc_brennen.json  example_ldpc_code.json  rotation_demonstration.json  simple_parity_check.json  simple_x_measurement.json
Code/Examples/: exampleREADME.md
Code/LDPC Circuit/: Interactive_LDPC_GUI_Documentation.html  Interactive_LDPC_GUI_Documentation.md  Interactive_LDPC_GUI_Documentation.rst  README.md
Code/LDPC Simulation/: ghz_state_preparation.py
Code/Tanner Thresholds/: interactive_tanner_3d.py  realtime_threshold_3d.py
Code/余分/: ldpcTemp.py  realtime_ldpc_circuit - Copy.py  realtime_simulation.py
docs/: index.md  ldpc_gui_documentation.md
docs/api/: components.md  config.md  processor.md  qldpc.md  simulation.md  tanner.md  theme.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: circuit-builder.md  ldpc-simulator.md  tanner-graph.md  threshold-landscape.md
qldpc/: __init__.py  components.py  config.py  processor.py  theme.py
qldpc/builder/: __init__.py  app.py  tutorials.py
qldpc/builder/renderers/: __init__.py
qldpc/builder/ui/: __init__.py  history.py
qldpc/simulation/: __init__.py  animations.py  cavity_gates.py  ghz.py  ldpc_circuit.py  quantum_circuits.py  syndrome.py
qldpc/tanner/: __init__.py  graph_3d.py  threshold_3d.py
saved_circuits/circuits/: controlled_h_demo.json  deutsch_jozsa.json  error_bell_y.json  error_bitflip_x.json  error_correction_demo.json  error_steane_x.json  ghz_5qubit.json  grover_2qubit.json  quantum_tanner_linear_decoder.json  superdense_coding.json  syndrome_extraction.json  tutorial_hypergraph_product.json  tutorial_ldpc_sparse.json  tutorial_repetition_code.json  tutorial_syndrome_extraction.json
saved_circuits/surface/: distance_3_patch.json  distance_5_patch.json  error_chain_demo.json  single_z_stabilizer.json  syndrome_correction_demo.json
tests/: test_components.py  test_config.py  test_imports.py  test_ldpc_code.py  test_processor.py
