[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-circuit-builder-3d"
version = "1.0.0"
description = "Interactive 3D Quantum LDPC Circuit Builder with drag-and-drop GUI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jeffrey Morais"}
]
keywords = [
    "quantum computing",
    "LDPC codes",
    "surface codes",
    "quantum error correction",
    "circuit builder",
    "visualization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.45.0",
    "qiskit-aer>=0.12.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "isort>=5.10.0",
]
all = [
    "quantum-circuit-builder-3d[quantum,dev]",
]

[project.urls]
Homepage = "https://github.com/username/quantum-circuit-builder-3d"
Documentation = "https://github.com/username/quantum-circuit-builder-3d#readme"
Repository = "https://github.com/username/quantum-circuit-builder-3d.git"
Issues = "https://github.com/username/quantum-circuit-builder-3d/issues"

[project.scripts]
quantum-circuit-builder = "quantum_circuit_builder.main:main"

[project.gui-scripts]
quantum-circuit-builder-gui = "quantum_circuit_builder.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_circuit_builder*"]

[tool.setuptools.package-data]
quantum_circuit_builder = ["*.json"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
